--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "com.unity.ai.navigation": "1.1.1",
+    "com.unity.burst": "1.8.3",
     "com.unity.ide.visualstudio": "2.0.17",
     "com.unity.inputsystem": "1.4.4",
     "com.unity.render-pipelines.universal": "14.0.4",
