--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,8 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+/Assets/Scenes/Demo.meta
+/Assets/Scenes/Demo/LightingData.asset
+/Assets/Scenes/Demo/LightingData.asset.meta
+/Assets/Scenes/Demo/ReflectionProbe-0.exr
+/Assets/Scenes/Demo/ReflectionProbe-0.exr.meta
