--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@ crashlytics-build.properties
 /Assets/Scenes/Demo/LightingData.asset.meta
 /Assets/Scenes/Demo/ReflectionProbe-0.exr
 /Assets/Scenes/Demo/ReflectionProbe-0.exr.meta
+/HybridCLRData/
