--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,13 +1,16 @@
 {
   "dependencies": {
+    "com.annulusgames.lit-motion": "https://github.com/annulusgames/LitMotion.git?path=src/LitMotion/Assets/LitMotion",
+    "com.annulusgames.lit-motion.animation": "https://github.com/annulusgames/LitMotion.git?path=src/LitMotion/Assets/LitMotion.Animation",
     "com.code-philosophy.hybridclr": "https://gitee.com/focus-creative-games/hybridclr_unity.git",
-    "com.unity.ai.navigation": "2.0.4",
+    "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
+    "com.unity.ai.navigation": "2.0.8",
     "com.unity.animation.rigging": "1.3.0",
-    "com.unity.burst": "1.8.18",
-    "com.unity.ide.visualstudio": "2.0.22",
-    "com.unity.inputsystem": "1.11.1",
-    "com.unity.render-pipelines.universal": "17.0.3",
-    "com.unity.test-framework": "1.4.5",
+    "com.unity.burst": "1.8.23",
+    "com.unity.ide.visualstudio": "2.0.23",
+    "com.unity.inputsystem": "1.14.0",
+    "com.unity.render-pipelines.universal": "17.1.0",
+    "com.unity.test-framework": "1.5.1",
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
     "com.unity.modules.accessibility": "1.0.0",
