--- a/Assets/Editor/BTWindowEditor/Game.BT.Editor.asmdef
+++ b/Assets/Editor/BTWindowEditor/Game.BT.Editor.asmdef
@@ -8,7 +8,8 @@
         "GUID:8c9ef94c4e33aae44bff179e64581112",
         "GUID:9b443c5ad3b147e29fd53a32b878ca5c",
         "GUID:cd1d1fbef539dd34689b004c4f848a28",
-        "GUID:f2836594a7782cb48addbdf8d22959fc"
+        "GUID:f2836594a7782cb48addbdf8d22959fc",
+        "GUID:177bbe523154f774e922c429fb296462"
     ],
     "includePlatforms": [
         "Editor"
